# GreenMoist

./: .gitignore  CMakeLists.txt  Compile.txt  README.md  app.js  package-lock.json  package.json
ActiveNode/: CMakeLists.txt  app.cfg  gmClasses.py  gmStateMachine.py  main.py  package-lock.json  picowebserver.py  program.cpp  task.cfg  webserver.py
ActiveNode/StateMachine/: StateMachine.cpp  StateMachine.h
ActiveNode/StateMachine/Base/: State.cpp  State.h  StateMachine.cpp  StateMachine.h
ActiveNode/StateMachine/States/: ReadingSoilPinState.cpp  ReadingSoilPinState.h  StatusState.cpp
ActiveNode/Testing/: Testing Ble.py  blink_webserver.py  httpMethods.py  picoPinWebserver.py  picowebserver.py  testing socket.py  thread.py
ActiveNode/drivers/: ble_simple_peripheral.py
Resources/FileOnDevice/: Testing Ble.py  app.cfg  gmClasses.py
Resources/FileOnDevice/drivers/: ble_advertising.py
Resources/Iteration/ActiveNode1st/: program.cpp.bak
Resources/Logo/: GreenMoistIcon.ai
Resources/RPiPicoW/: Ensuring robust connections.py  HTTP with urequests.py  PicoWebServer.py  Running iperf.py  ble_temperature.py  blinky.py  picow_ble_temp_reader.py  redirects.py  webserver.py
Resources/RPiPicoW/TestProject/: CMakeLists.txt  picow_blink.c
Resources/Testing/: Advertsing a Bluetooth service.py  HTTP with urequests.py  adc.py  advanced_network_connection.py  asynchronous web server.py  bleble.py  bleclient.py  blinky.py  blockingSocket.py  connectToClient.py  discover.py  download task to pico.py  httpMethods.py  http_request.py  mac_address.py  open file.py  scan.py  scanBLE.py  simple_network_connection.py  test.py  testing BLE blink.py  testing socket.py  webserver.py
Resources/Testing Values/: readings.xlsx
Resources/Testing/BLE/: adv.js  echo.js  index.js  index.js.save  package-lock.json  package.json  rpico.txt  scan.txt  test.js
Resources/Testing/Values/: Tabular_reading.xlsx  readings.txt  soil.txt.txt
Resurces/: pico-env.lnk
Resurces/RPiPicoW/: PicoWebServer.py
Resurces/TestProject/ActiveNode/: CMakeLists.txt
Resurces/Testing Values/: Tabular_reading.txt  Tabular_reading.xlsx  Tabular_reading2.txt
ServerNode/: README.md  app.config  app.js  package-lock.json  package.json
ServerNode/ActiveNode/: activenode.py  gmClasses.py  main.py  task.cfg
ServerNode/export/: task2.cfg  task3.cfg
ServerNode/models/: device.js  devicerecord.js  pageInformation.js  task.js  taskprocess.js  user.js
ServerNode/public/javascripts/: batchaddition.js  crud.js  site.js
ServerNode/public/stylesheets/: style.css
ServerNode/routes/: _navigation.js  _routeConfig.js  devices.js  index.js  interface.js  tasks.js  tasksProcesses.js  users.js
ServerNode/views/: index.ejs
ServerNode/views/_shared/: _head.ejs  _navigator.ejs  _scripts.ejs  _stylesheets.ejs  template.ejs
ServerNode/views/devices/: ble-devices.ejs  details.ejs  entry.ejs  list.ejs
ServerNode/views/processes/: details.ejs  entry.ejs
ServerNode/views/tasks/: details.ejs  entry.ejs  list.ejs
ServerNode/views/users/: details.ejs  (+2 more)
Testing/: download task to pico.py  index.html  index.js  webserver.py
backup/ActiveNode/: CMakeLists.txt  program.cpp
models/: pageInformation.js
routes/: _navigation.js  _routeConfig.js  index.js  users.js
views/_shared/: _scripts.ejs
views/users/: details.ejs  new.ejs  users.ejs
(+7 files in other folders)
